--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     </div>
     <div id="example">
         <h1>{{ title }}, {{ name.toUpperCase() }}</h1>
-        <p> {{ message }} </p>
+        <p v-text="message"></p>
+        <img v-bind:src="img.src" v-bind:alt="img.alt">
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
     <script src="app.js"></script>
