--- a/rainbowApp.html
+++ b/rainbowApp.html
@@ -8,16 +8,13 @@
     <title>Hello Vue!</title>
 </head>
 <body>
-    <div id="helloVue">
-        <h1>{{ title }}</h1>
-        <p> {{ message }} </p>
+    <div id="rainbowApp">
+        <ul>
+            <li v-bind:style="{color:item}" v-for="(item,index) in rainbowColors">{{ index }} - {{ item }}</li>
+        </ul>    
+        
     </div>
-    <div id="example">
-        <h1>{{ title }}, {{ name.toUpperCase() }}</h1>
-        <p v-text="message"></p>
-        <img v-bind:src="img.src" v-bind:alt="img.alt">
-    </div>
-    <script src="https://unpkg.com/vue"></script>
-    <script src="app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
+    <script src="rainbowApp.js"></script>
 </body>
 </html>
