vbind css clack no vue magic

--- a/accordion/index.html
+++ b/accordion/index.html
@@ -19,7 +19,7 @@
        <ul>
         <li v-for="(media,index) in mediaList" 
             v-on:click="toggleShowDetail(media)" 
-            v-bind:class="[{less: media.showDetail,more: !media.showDetail},media.type]" 
+            v-bind:class="[media.showDetail?'less':'more',media.type]" 
             v-show="type==='' | media.type===type">
           <h3>{{ media.title }}</h3> 
           <div v-show="media.showDetail">
